# spi_proto

./: .gitignore  99-spidev-open.rules  CMakeLists.txt  Makefile  binary_semaphore.c  bisem-test.cpp  click-test.cpp  config.h  datagram.md  design.txt  documentation.md  linux_test_end.c  readme.md  spi_proto.c  spi_proto.h  spi_proto_master.cpp  spi_proto_master.h  spi_proto_tests.c  spi_proto_util.h  spi_remote.c  spi_remote.h  spi_remote_host.c  spi_remote_host.h  spi_slave.c
sock_spi_bridge/: Makefile  sock_spi_bridge.c  sock_spi_test_client.c
spi_linux_monitor/: Makefile  linux_test_end.c  monitor.c  monitor.h  spi_chunk_defines.h
spi_linux_test_endpoint/: Makefile  chunk_test.c  linux_test_end.c
spi_proto_lib/: spi_chunk_defines.h  spi_chunks.cpp  spi_proto.c  spi_proto_util.c
src/: binary_semaphore.c  binary_semaphore.h  crc16.c  crc16.h  spi_chunk_defines.h  spi_chunks.cpp  spi_chunks.h  spi_datagram.h  spi_proto.c  spi_proto.h  spi_proto_master.cpp  spi_proto_master.h  spi_proto_master_datagram.cpp  spi_proto_master_datagram.h  spi_proto_util.c  spi_remote.h  spi_remote_host.c  spi_remote_host.h
test/: blip-test.cpp  click-test.cpp  gpio-meta-test.cpp  monitor.cpp  spi_proto_tests.c  test_chunks.c  test_longer_random_messages.c  test_resync.c  test_util.c  test_util.h
